finalizaçao do projeto

--- a/segpage.html
+++ b/segpage.html
@@ -17,7 +17,15 @@
     
       <p id="RespostaDoBot"></p>
 
-      
+      <div id="modal" style="display: none;">
+        <div style="background-color: white;
+                    padding: 20px;
+                    border: 1px solid black; 
+                    ">
+            <p>Obrigado</p>
+            <button onclick="fecharModal()"> finalizar</button>
+        </div>
+      </div>
 
     <script src="script2.js"></script>
 </body>
